refactored poza detail, form templates, fixed js for tag editing, added "e" hotkey to jump to editing, added taglist in contet menu

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -69,3 +69,28 @@ div.image-container:hover .face {
 /*a.delete {*/
     /*color: #FF0000;*/
 /*}*/
+
+
+.tag {
+    color: #555555;
+    background-color: #f5f5f5;
+    border: #bbbbbb 1px solid;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    display: inline-block;
+    border-radius: 3px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 13px;
+    margin: 0 5px 5px 0;
+    padding: 4px;
+    text-decoration: none;
+    transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+    -moz-transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+    -webkit-transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+    vertical-align: middle;
+}
+
+.tag.tag-small {
+    font-size: 11.049999999999999px;
+    border-radius: 3px;
+    padding: 2px 4px;
+}
